--- a/web/templates/topic/index.html.eex
+++ b/web/templates/topic/index.html.eex
@@ -6,3 +6,10 @@
       <%= topic.title %>
   <% end %>
 </ul>
+
+<div class="fixed-action-btn">
+  <%= link to: topic_path(@conn, :new), class: "btn-floating btn-large waves-effect waves-light red" do %>
+    <i class="material-icons">add</i>
+  <% end %>
+  </a>
+</div>
