--- a/web/templates/topic/index.html.eex
+++ b/web/templates/topic/index.html.eex
@@ -4,12 +4,18 @@
   <%= for topic <- @topics do %>
     <li class="collection-item">
       <%= topic.title %>
+    
+    <div class="right">
+      <%= link "Edit", to: topic_path(@conn, :edit, topic) %>
+    </div>
+
   <% end %>
 </ul>
 
 <div class="fixed-action-btn">
   <%= link to: topic_path(@conn, :new), class: "btn-floating btn-large waves-effect waves-light red" do %>
     <i class="material-icons">add</i>
+
   <% end %>
   </a>
 </div>
